--- a/client/css/login.css
+++ b/client/css/login.css
@@ -1,3 +1,7 @@
+* {
+  font-family: PingFangSC, Helvetica Neue, Helvetica, Arial, Hiragino Sans GB, \5fae\8f6f\96c5\9ed1, tahoma, simsun, sans-serif;
+}
+
 body {
   width: 100%;
   height: 100%;
@@ -83,4 +87,77 @@ body #app .stepguide .step {
 body #app .stepguide .stepcurrent {
   color: #2c82ff;
   font-weight: 700;
+}
+
+body .box {
+  width: 444px;
+  padding: 20px 0;
+  margin: 20px auto 0;
+}
+
+body .box .nop-form-item {
+  font-size: 14px;
+}
+
+body .box .nop-form-item .nop-form-item-input {
+  position: relative;
+  height: 76px;
+}
+
+body .box .nop-form-item .nop-form-item-input .bview-input-wrapper {
+  position: relative;
+  display: inline-block;
+  height: 46px;
+}
+
+body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input-icon {
+  width: 42px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 17px;
+  text-align: center;
+  color: #ccc;
+  position: absolute;
+  background: salmon;
+  right: 1px;
+  top: 1px;
+  z-index: 3;
+}
+
+body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input {
+  width: 100%;
+  height: 100%;
+  padding: 0 44px 0 10px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  font-size: 14px;
+  background: #fff;
+  line-height: 32px;
+  vertical-align: middle;
+  outline: none;
+}
+
+body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .ieplaceholder {
+  width: 99.5%;
+  height: 44px;
+  position: absolute;
+  z-index: 201;
+  top: 1px;
+  left: 1px;
+  color: #bdbdbd;
+  font-size: 14px;
+  font-weight: 400;
+  cursor: text;
+  line-height: 44px;
+  text-indent: 14px;
+  background: #fff;
+}
+
+body .box .nop-form-item .nop-form-item-input .nop-form-item-tip {
+  min-height: 28px;
+  margin-top: 2px;
+  font-size: 14px;
+  color: #ea3d3d;
 }
