--- a/client/css/base.css
+++ b/client/css/base.css
@@ -1,4 +1,5 @@
 ﻿@charset "utf-8";
+
 h1,
 h2,
 h3,
@@ -16,9 +17,11 @@ a,
 a:hover {
     text-decoration: none
 }
-a:active{
+
+a:active {
     opacity: 0.7;
 }
+
 .block,
 article,
 aside,
@@ -41,22 +44,30 @@ section {
 .text-center {
     text-align: center
 }
-.tar,.text-right{
+
+.tar,
+.text-right {
     text-align: right;
 }
+
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     height: 100%
 }
 
-input,
+/* input,
 input[type=submit],
 input[type=reset],
 input[type=button] {
     -webkit-appearance: none;
-    resize: none
-}
+    resize: none;
+    outline: none;
+} */
+
+/* input {
+    outline: none;
+} */
 
 a,
 article,
@@ -154,19 +165,24 @@ input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
     color: #ccc
 }
-.hide{
+
+.hide {
     display: none;
 }
-.lrp5{
-  padding-left: 5px;
-  padding-right: 5px;
+
+.lrp5 {
+    padding-left: 5px;
+    padding-right: 5px;
 }
-.h100{
+
+.h100 {
     height: 100px;
 }
-.lh100{
+
+.lh100 {
     line-height: 100px;
 }
+
 .h100p {
     height: 100%
 }
@@ -200,61 +216,69 @@ textarea::-webkit-input-placeholder {
 }
 
 .red {
-    color: #ff8383!important
+    color: #ff8383 !important
 }
 
 .green {
-    color: #5cd390!important
+    color: #5cd390 !important
 }
 
 .gray {
     color: #888;
 }
-.bgwhite{
+
+.bgwhite {
     background: #fff;
 }
+
 .bgred {
-    background: #ff83!important
+    background: #ff83 !important
 }
 
 .bggreen {
-    background: #5cd390!important
+    background: #5cd390 !important
 }
 
 .bgblue {
-    background: #7dd3dc!important
+    background: #7dd3dc !important
 }
+
 .bgOrange {
-    background: #ffc600!important
+    background: #ffc600 !important
 }
+
 .bgxgreen {
-    background: #7ddca7!important
+    background: #7ddca7 !important
 }
 
 .bggray {
-    background: #D8D8D8!important
+    background: #D8D8D8 !important
 }
-.bdgreen{
-	
-  border:1px solid #7ddca7;
+
+.bdgreen {
+
+    border: 1px solid #7ddca7;
 }
+
 .nobg {
-    background: 0 0!important;
-    border: 1px solid #acacac!important
+    background: 0 0 !important;
+    border: 1px solid #acacac !important
 }
-.w20{
+
+.w20 {
     width: 20px;
 }
+
 .w45p {
-    width: 45%!important;
+    width: 45% !important;
 }
 
 .w80p {
-    width: 80%!important;
+    width: 80% !important;
 }
 
 .w90p {
-    width: 90%!important;
+    width: 90% !important;
 }
 
 .w35p {
@@ -264,12 +288,15 @@ textarea::-webkit-input-placeholder {
 .w30p {
     width: 30%;
 }
-.w20p{
+
+.w20p {
     width: 20%;
 }
-.w80p{
+
+.w80p {
     width: 80%;
 }
+
 .dbt {
     font-size: 18px
 }
@@ -284,7 +311,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .bdt {
-    border-bottom: #f2f2f2 solid 2px!important
+    border-bottom: #f2f2f2 solid 2px !important
 }
 
 .block {
@@ -300,7 +327,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .pb15 {
-    padding-bottom: 15px!important
+    padding-bottom: 15px !important
 }
 
 .pl20 {
@@ -353,12 +380,12 @@ textarea::-webkit-input-placeholder {
 }
 
 .active {
-    color: #0db789!important;
+    color: #0db789 !important;
 }
 
 .oc07 {
     opacity: .7;
-    display: block!important
+    display: block !important
 }
 
 .bold {
@@ -453,15 +480,18 @@ textarea::-webkit-input-placeholder {
     border-radius: 5px;
     color: #fff
 }
-.button[disabled]{
+
+.button[disabled] {
     color: #fff;
     border-color: #fff;
     background: #ddd url(../images/loading.gif) 95% center no-repeat;
     background-size: 15px;
 }
-.button:active{
+
+.button:active {
     opacity: 0.8;
 }
+
 .item {
     background-color: #fff;
     padding: 10px 0
