--- a/client/css/login.css
+++ b/client/css/login.css
@@ -5,6 +5,7 @@
 body {
   width: 100%;
   height: 100%;
+  background: #f8f8f8;
 }
 
 body .m-head {
@@ -89,42 +90,28 @@ body #app .stepguide .stepcurrent {
   font-weight: 700;
 }
 
-body .box {
+body #app .box {
   width: 444px;
   padding: 20px 0;
   margin: 20px auto 0;
 }
 
-body .box .nop-form-item {
+body #app .box .nop-form-item {
   font-size: 14px;
 }
 
-body .box .nop-form-item .nop-form-item-input {
+body #app .box .nop-form-item .nop-form-item-input {
   position: relative;
   height: 76px;
 }
 
-body .box .nop-form-item .nop-form-item-input .bview-input-wrapper {
+body #app .box .nop-form-item .nop-form-item-input .bview-input-wrapper {
   position: relative;
   display: inline-block;
   height: 46px;
 }
 
-body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input-icon {
-  width: 42px;
-  height: 44px;
-  line-height: 44px;
-  font-size: 17px;
-  text-align: center;
-  color: #ccc;
-  position: absolute;
-  background: salmon;
-  right: 1px;
-  top: 1px;
-  z-index: 3;
-}
-
-body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input {
+body #app .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input {
   width: 100%;
   height: 100%;
   padding: 0 44px 0 10px;
@@ -139,7 +126,25 @@ body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input 
   outline: none;
 }
 
-body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .ieplaceholder {
+body #app .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input-icon {
+  width: 42px;
+  height: 44px;
+  line-height: 44px;
+  font-size: 17px;
+  text-align: center;
+  color: #ccc;
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  z-index: 3;
+  display: none;
+}
+
+body #app .box .nop-form-item .nop-form-item-input .bview-input-wrapper .bview-input-icon .iconfont {
+  font-size: 26px;
+}
+
+body #app .box .nop-form-item .nop-form-item-input .bview-input-wrapper .ieplaceholder {
   width: 99.5%;
   height: 44px;
   position: absolute;
@@ -155,9 +160,104 @@ body .box .nop-form-item .nop-form-item-input .bview-input-wrapper .ieplaceholde
   background: #fff;
 }
 
-body .box .nop-form-item .nop-form-item-input .nop-form-item-tip {
+body #app .box .nop-form-item .nop-form-item-input .nop-form-item-tip {
+  display: none;
   min-height: 28px;
   margin-top: 2px;
   font-size: 14px;
   color: #ea3d3d;
+}
+
+body #app .box .agree {
+  -webkit-tap-highlight-color: transparent;
+  margin: 0;
+  color: #666;
+  font-size: 14px;
+  position: relative;
+  padding-left: 24px;
+  cursor: pointer;
+}
+
+body #app .box .agree #infont {
+  float: left;
+  display: block;
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  left: 3px;
+  top: 4px;
+  border: 1px solid #2c82ff;
+  border-radius: 2px;
+}
+
+body #app .box .agree .u-agree-area {
+  float: left;
+}
+
+body #app .box .agree .u-agree-area a {
+  color: #2c82ff;
+}
+
+body #app .box .step0-btn {
+  display: inline-block;
+  vertical-align: middle;
+  height: 46px;
+  line-height: 46px;
+  border-color: #2c82ff;
+  background-color: #2c82ff;
+  width: 100%;
+  margin-top: 10px;
+  border-radius: 2px;
+  border-width: 0;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  font-weight: 700;
+  outline: none;
+  font-size: 17px;
+}
+
+body #app .box .m-gologin {
+  font-size: 14px;
+  color: #333;
+  margin-top: 10px;
+}
+
+body #app .box .m-gologin .u-href {
+  color: #2c82ff;
+}
+
+body .g-ft {
+  width: 100%;
+  height: 100%;
+}
+
+body .g-ft .bview-footer {
+  height: 150px;
+  width: 100%;
+}
+
+body .g-ft .bview-footer .m-c {
+  padding-top: 46px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 12px;
+  line-height: 20px;
+  color: #b8b8b8;
+}
+
+body .g-ft .bview-footer .m-c .u-link {
+  text-align: center;
+}
+
+body .g-ft .bview-footer .m-c .u-link a {
+  cursor: pointer;
+  margin: 0 5px;
+  color: #b8b8b8;
+}
+
+body .g-ft .bview-footer .m-c .u-icp {
+  margin: 6px 0;
 }
