--- a/client/css/login.scss
+++ b/client/css/login.scss
@@ -2,11 +2,13 @@
 
 * {
     font-family: PingFangSC, Helvetica Neue, Helvetica, Arial, Hiragino Sans GB, \5fae\8f6f\96c5\9ed1, tahoma, simsun, sans-serif;
+
 }
 
 body {
     width: 100%;
     height: 100%;
+    background: #f8f8f8;
 
     .m-head {
         height: 64px;
@@ -89,79 +91,181 @@ body {
                 font-weight: 700;
             }
         }
-    }
 
-    .box {
-        width: 444px;
-        padding: 20px 0;
-        margin: 20px auto 0;
 
-        .nop-form-item {
-            font-size: 14px;
+        .box {
+            width: 444px;
+            padding: 20px 0;
+            margin: 20px auto 0;
 
-            .nop-form-item-input {
-                position: relative;
-                height: 76px;
+            .nop-form-item {
+                font-size: 14px;
 
-                .bview-input-wrapper {
+                .nop-form-item-input {
                     position: relative;
-                    display: inline-block;
-                    height: 46px;
+                    height: 76px;
 
-                    .bview-input-icon {
-                        width: 42px;
-                        height: 44px;
-                        line-height: 44px;
-                        font-size: 17px;
-                        text-align: center;
-                        color: #ccc;
-                        position: absolute;
-                        // background: #fff;
-                        background: salmon;
-                        right: 1px;
-                        top: 1px;
-                        z-index: 3;
+                    .bview-input-wrapper {
+                        position: relative;
+                        display: inline-block;
+                        height: 46px;
+
+                        .bview-input {
+                            width: 100%;
+                            height: 100%;
+                            padding: 0 44px 0 10px;
+                            -moz-box-sizing: border-box;
+                            box-sizing: border-box;
+                            border: 1px solid #ccc;
+                            // border-color: red;
+                            // border: 1px solid #ea3d3d;
+                            border-radius: 2px;
+                            font-size: 14px;
+                            background: #fff;
+                            line-height: 32px;
+                            vertical-align: middle;
+                            outline: none;
+                        }
+
+                        .bview-input-icon {
+                            width: 42px;
+                            height: 44px;
+                            line-height: 44px;
+                            font-size: 17px;
+                            text-align: center;
+                            color: #ccc;
+                            position: absolute;
+                            // background: #fff;
+                            // background: salmon;
+                            right: 1px;
+                            top: 1px;
+                            z-index: 3;
+                            display: none;
+
+                            .iconfont {
+                                font-size: 26px;
+                            }
+                        }
+
+                        .ieplaceholder {
+                            width: 99.5%;
+                            height: 44px;
+                            position: absolute;
+                            z-index: 201;
+                            top: 1px;
+                            left: 1px;
+                            color: #bdbdbd;
+                            font-size: 14px;
+                            font-weight: 400;
+                            cursor: text;
+                            line-height: 44px;
+                            text-indent: 14px;
+                            background: #fff;
+                        }
+
                     }
 
-                    .bview-input {
-                        width: 100%;
-                        height: 100%;
-                        padding: 0 44px 0 10px;
-                        -moz-box-sizing: border-box;
-                        box-sizing: border-box;
-                        border: 1px solid #ccc;
-                        // border: 1px solid #ea3d3d;
-                        border-radius: 2px;
+                    .nop-form-item-tip {
+                        display: none;
+                        min-height: 28px;
+                        margin-top: 2px;
                         font-size: 14px;
-                        background: #fff;
-                        line-height: 32px;
-                        vertical-align: middle;
-                        outline: none;
+                        color: #ea3d3d;
                     }
+                }
+            }
 
-                    .ieplaceholder {
-                        width: 99.5%;
-                        height: 44px;
-                        position: absolute;
-                        z-index: 201;
-                        top: 1px;
-                        left: 1px;
-                        color: #bdbdbd;
-                        font-size: 14px;
-                        font-weight: 400;
-                        cursor: text;
-                        line-height: 44px;
-                        text-indent: 14px;
-                        background: #fff;
-                    }
+            .agree {
+                -webkit-tap-highlight-color: transparent;
+                margin: 0;
+                color: #666;
+                font-size: 14px;
+                position: relative;
+                padding-left: 24px;
+                cursor: pointer;
 
+                #infont {
+                    float: left;
+                    display: block;
+                    position: absolute;
+                    width: 12px;
+                    height: 12px;
+                    left: 3px;
+                    top: 4px;
+                    border: 1px solid #2c82ff;
+                    border-radius: 2px;
                 }
 
-                .nop-form-item-tip {
-                    min-height: 28px;
-                    margin-top: 2px;
-                    font-size: 14px;
-                    color: #ea3d3d;
+                .u-agree-area {
+                    float: left;
+
+                    a {
+                        color: #2c82ff;
+                    }
+                }
+            }
+
+            .step0-btn {
+                display: inline-block;
+                vertical-align: middle;
+                height: 46px;
+                line-height: 46px;
+                border-color: #2c82ff;
+                background-color: #2c82ff;
+                width: 100%;
+                margin-top: 10px;
+                border-radius: 2px;
+                border-width: 0;
+                -moz-box-sizing: border-box;
+                box-sizing: border-box;
+                color: #fff;
+                cursor: pointer;
+                position: relative;
+                font-weight: 700;
+                outline: none;
+                font-size: 17px;
+            }
+
+            .m-gologin {
+                font-size: 14px;
+                color: #333;
+                margin-top: 10px;
+
+                .u-href {
+                    color: #2c82ff;
+                }
+            }
+        }
+    }
+
+    .g-ft {
+        width: 100%;
+        height: 100%;
+
+        .bview-footer {
+            height: 150px;
+            width: 100%;
+
+            .m-c {
+                padding-top: 46px;
+                margin: 0 auto;
+                text-align: center;
+                font-size: 12px;
+                line-height: 20px;
+                color: #b8b8b8;
+
+                .u-link {
+                    text-align: center;
+
+                    a {
+                        cursor: pointer;
+                        margin: 0 5px;
+                        color: #b8b8b8;
+                    }
+                }
+
+                .u-icp {
+                    margin: 6px 0;
                 }
             }
         }
