--- a/client/css/head-style.css
+++ b/client/css/head-style.css
@@ -26,6 +26,27 @@ body .navbar .m-header {
   border-bottom: 1px solid #d6d6d6;
 }
 
+body .navbar .m-header .Mont {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: black;
+  opacity: 0.6;
+  z-index: 1000;
+  display: none;
+}
+
+body .navbar .m-header .g-bd {
+  position: relative;
+  width: 420px;
+  overflow: hidden;
+  border-radius: 4px;
+  background: #fff;
+}
+
 body .navbar .m-header .container {
   width: 1226px;
   margin: 0 auto;
@@ -194,6 +215,7 @@ body .select-container {
   width: 1227px;
   margin: 0 auto 37px;
   overflow: hidden;
+  height: 809px;
 }
 
 body .select-container .title {
