--- a/client/css/head-style.scss
+++ b/client/css/head-style.scss
@@ -18,6 +18,31 @@ body {
         background: #fff;
 
         .m-header {
+
+            // 登录蒙层样式
+            .Mont {
+                position: fixed;
+                top: 0px;
+                left: 0px;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                background: rgb(0, 0, 0);
+                opacity: 0.6;
+                z-index: 1000;
+                display: none;
+
+            }
+
+            .g-bd {
+                // display: none;
+                position: relative;
+                width: 420px;
+                overflow: hidden;
+                border-radius: 4px;
+                background: #fff;
+            }
+
             vertical-align: baseline;
             height: 100px;
             margin-right: auto;
@@ -25,7 +50,6 @@ body {
             min-width: 1226px;
             width: 100%;
             border-bottom: 1px solid #d6d6d6;
-            // background: #cccccc;
 
             .container {
                 width: 1226px;
@@ -47,7 +71,7 @@ body {
                     overflow: hidden;
                     padding-left: 150px;
                     padding-right: 105px;
-                    // background: lightblue;
+
                     height: 100px;
 
                     li {
@@ -70,7 +94,6 @@ body {
                             min-width: 1226px;
                             max-height: 640px;
                             overflow: auto;
-                            // background-color: transparent;
                             z-index: 5;
                             display: none;
                             background-color: #fff;
@@ -149,13 +172,13 @@ body {
                         height: 30px;
                         top: 0;
                         cursor: pointer;
-                        // float: left;
+
                         left: 0;
                         background-position: 0 -43px;
 
                         .icon-wode {
                             font-size: 28px;
-                            // color: #1989E9;
+
                         }
 
                         .index-pop {
@@ -166,7 +189,7 @@ body {
                             padding-top: 20px;
                             top: 50px;
                             left: -70px;
-                            // z-index: 99999;
+
                             background: url(../images/indexpop.png) no-repeat;
                             margin-top: 0px;
                             padding-bottom: 0px;
@@ -211,6 +234,7 @@ body {
         width: 1227px;
         margin: 0 auto 37px;
         overflow: hidden;
+        height: 809px;
 
         .title {
             display: inline-block;
@@ -379,4 +403,6 @@ body {
             }
         }
     }
+
+
 }
