--- a/client/css/login.scss
+++ b/client/css/login.scss
@@ -92,11 +92,15 @@ body {
             }
         }
 
+        #step0-btn {
+            display: block;
+        }
 
         .box {
             width: 444px;
             padding: 20px 0;
             margin: 20px auto 0;
+            display: none;
 
             .nop-form-item {
                 font-size: 14px;
@@ -165,12 +169,21 @@ body {
 
                     }
 
-                    .nop-form-item-tip {
+                    // .nop-form-item-tip {
+                    //     display: none;
+                    //     min-height: 28px;
+                    //     margin-top: 2px;
+                    //     font-size: 14px;
+                    //     color: #ea3d3d;
+                    // }
+
+                    .error {
                         display: none;
                         min-height: 28px;
                         margin-top: 2px;
                         font-size: 14px;
                         color: #ea3d3d;
+                        display: block;
                     }
                 }
             }
@@ -234,6 +247,280 @@ body {
                 .u-href {
                     color: #2c82ff;
                 }
+            }
+
+        }
+
+        // 注册第二部样式
+        .box1 {
+            width: 444px;
+            height: 316px;
+            padding: 20px 0;
+            margin: 20px auto 0;
+            // background: skyblue;
+            display: none;
+
+            .m-realname {
+                font-size: 14px;
+
+                .u-title {
+                    font-weight: 700;
+                    padding: 12px 0 30px 12px;
+                    position: relative;
+                    text-align: left;
+                    font-size: 16px;
+                    color: #141b3b;
+                }
+
+                .m-box {
+                    width: 444px;
+                    margin: 0 auto;
+                    font-size: 14px;
+
+                    .u-note {
+                        margin-bottom: 10px;
+                        text-align: left;
+                        color: #141b3b;
+                        background: #f8f8f8;
+                    }
+
+                    .form-item {
+                        font-size: 14px;
+                        width: 444px;
+                        height: 76px;
+
+                        .bview-input {
+                            position: relative;
+                            display: inline-block;
+                            width: 100%;
+                            height: 46px;
+
+                            .intp-box {
+                                width: 100%;
+                                height: 100%;
+                                padding: 0 44px 0 10px;
+                                -moz-box-sizing: border-box;
+                                box-sizing: border-box;
+                                border: 1px solid #ccc;
+                                border-radius: 2px;
+                                font-size: 14px;
+                                background: #fff;
+                                line-height: 32px;
+                                vertical-align: middle;
+                                outline: none;
+
+                            }
+                        }
+
+                        // .item-tip {
+                        //     display: none;
+                        //     min-height: 28px;
+                        //     margin-top: 2px;
+                        //     font-size: 14px;
+                        //     color: #ea3d3d;
+                        //     display: block;
+                        // }
+
+                        .error {
+                            display: none;
+                            min-height: 28px;
+                            margin-top: 2px;
+                            font-size: 14px;
+                            color: #ea3d3d;
+                            display: block;
+                        }
+                    }
+
+                    .m-btn {
+                        display: inline-block;
+                        vertical-align: middle;
+                        height: 46px;
+                        line-height: 46px;
+                        border-color: #2c82ff;
+                        background-color: #2c82ff;
+                        width: 100%;
+                        margin-top: 10px;
+                        border-radius: 2px;
+                        border-width: 0;
+                        -moz-box-sizing: border-box;
+                        box-sizing: border-box;
+                        color: #fff;
+                        cursor: pointer;
+                        position: relative;
+                        font-weight: 700;
+                        outline: none;
+                        font-size: 17px;
+
+                    }
+                }
+            }
+        }
+
+        // 注册第三步
+        .box2 {
+            width: 444px;
+            height: 316px;
+            padding: 20px 0;
+            margin: 20px auto 0;
+            // background: skyblue;
+            display: none;
+
+            .m-realphone {
+                font-size: 14px;
+
+                .u-title {
+                    font-weight: 700;
+                    padding: 12px 0 30px 12px;
+                    position: relative;
+                    text-align: left;
+                    font-size: 16px;
+                    color: #141b3b;
+                }
+
+                .u-box {
+                    width: 444px;
+                    margin: 0 auto;
+                    font-size: 14px;
+
+                    .note {
+                        margin-bottom: 10px;
+                        text-align: left;
+                        color: #141b3b;
+                        background: #f8f8f8;
+                    }
+
+                    .form-phone {
+                        font-size: 14px;
+                        width: 444px;
+                        height: 76px;
+
+                        .bview-input {
+                            position: relative;
+                            display: inline-block;
+                            width: 100%;
+                            height: 46px;
+
+                            .pnone-time {
+                                width: 100%;
+                                height: 100%;
+                                padding: 0 5px 0 50px;
+                                -moz-box-sizing: border-box;
+                                box-sizing: border-box;
+                                border: 1px solid #ccc;
+                                border-radius: 2px;
+                                font-size: 14px;
+                                background: #fff;
+                                line-height: 32px;
+                                vertical-align: middle;
+                                outline: none;
+                            }
+
+                            .bview-input-icon-prepend {
+                                cursor: pointer;
+                                position: absolute;
+                                left: .28rem;
+                                bottom: .2em;
+                                width: 3.5em;
+                                height: 2.5em;
+                                z-index: 11;
+                                font-size: 14px;
+                                line-height: 2em;
+
+                                em {
+                                    left: .3em;
+                                    height: 2em;
+                                    width: 3em;
+                                    text-align: center;
+                                    margin: .4em 0 0;
+                                    margin-left: 0.8em;
+                                    color: #666;
+                                }
+
+                            }
+                        }
+
+                        .error {
+                            display: none;
+                            min-height: 28px;
+                            margin-top: 2px;
+                            font-size: 14px;
+                            color: #ea3d3d;
+                            display: block;
+                        }
+                    }
+
+                    .verification {
+                        font-size: 14px;
+                        width: 444px;
+                        height: 76px;
+
+                        .bview-input {
+                            position: relative;
+                            display: inline-block;
+                            width: 100%;
+                            height: 46px;
+
+                            .code-itme {
+                                width: 45%;
+                                height: 100%;
+                                padding: 0 5px 0 10px;
+                                -moz-box-sizing: border-box;
+                                box-sizing: border-box;
+                                border: 1px solid #ccc;
+                                border-radius: 2px;
+                                font-size: 14px;
+                                background: #fff;
+                                line-height: 32px;
+                                vertical-align: middle;
+                                outline: none;
+                            }
+
+                            .identifying-code {
+                                cursor: pointer;
+                                position: absolute;
+                                // left: 0px;
+                                bottom: 0px;
+                                width: 150px;
+                                height: 100%;
+                                right: 20px;
+                                // z-index: 11;
+                                font-size: 14px;
+                                line-height: 2em;
+                                // background: lightpink;
+                            }
+                        }
+
+                        .error {
+                            min-height: 28px;
+                            margin-top: 2px;
+                            font-size: 14px;
+                            color: #ea3d3d;
+                            display: block;
+                        }
+                    }
+
+                    .s-btn {
+                        display: inline-block;
+                        vertical-align: middle;
+                        height: 46px;
+                        line-height: 46px;
+                        border-color: #2c82ff;
+                        background-color: #2c82ff;
+                        width: 100%;
+                        margin-top: 10px;
+                        border-radius: 2px;
+                        border-width: 0;
+                        -moz-box-sizing: border-box;
+                        box-sizing: border-box;
+                        color: #fff;
+                        cursor: pointer;
+                        position: relative;
+                        font-weight: 700;
+                        outline: none;
+                        font-size: 17px;
+                    }
+                }
+
             }
         }
     }
